istio/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - booking-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: booking-service-service.spring-boot-namespace.svc.cluster.local
        port:
          number: 8080
